--- a/lesson6-styling/01-focus-styles/main.css
+++ b/lesson6-styling/01-focus-styles/main.css
@@ -6,9 +6,13 @@ button:hover,
 button:focus,
 a:hover,
 a:focus {
+        background: #DDA0DD;
+        color: #6495ED;
+        text-decoration: underline;
   outline: none;
-  color: inherit;
+  /*color: inherit;*/
   text-decoration: none;
+  box-shadow: 0 0 8px 3px #FFFF00;
 }
 
 .nav > li > a {
@@ -18,7 +22,9 @@ a:focus {
 
 .nav > li > a:focus {
   text-decoration: none;
-  background: transparent;
+  background: #7FFFFFFF;
+  outline: 0;
+  box-shadow: 0 0 8px 3px #FF9362;
 }
 
 .jumbotron .mdl-button {
@@ -30,4 +36,14 @@ a:focus {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),
               0 3px 1px -2px rgba(0, 0, 0, .2),
               0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+.mdl-button:hover,
+.mdl-button:focus {
+         background: #DDA0DD;
+        color: #6495ED;
+        text-decoration: underline;
+}
+.mdl-button:focus {
+    outline: 0;
+    box-shadow: 0 0 8px 3px #00FFFFFF;
 }
